# parser

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  readme.md
.github/workflows/: container.yml  coverage.yml  rust.yml
src/: apply_changes.rs  apply_details.rs  build.rs  changestatus.rs  events.rs  generate_ics.rs  main.rs  output_files.rs  userconfig.rs  userconfigs.rs  watchcat.rs
