[package]
name = "hawhh-calendarbot-parser"
version = "3.1.3"
license = "AGPL-3.0-or-later"
repository = "https://github.com/HAWHHCalendarBot/parser"
authors = ["EdJoPaTo <calendarbot-parser@hawhh.de>"]
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.9"
notify-debouncer-full = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
